<resources>
    <string name="choose_target_language">Choose Target Language</string>
    <string name="choose_target_book">Choose Target Book</string>


    <string name="app_name">Translation Recorder</string>
    <string name="hello_world">Hello world!</string>
    <string name="folder_name">TranslationRecorder</string>
    <string name="action_settings">Settings</string>
	
    <!-- Record.java -->
    <string name="resume_recording">Resume Recording</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="playing_audio">Playing Audio</string>
    <string name="pause_recording">Paused Recording</string>

    <!-- DIALOGUE -->
    <string name="diag_export">Export Audio</string>
    <string name="exit">Are you sure you want to exit without saving?</string>
    <string name="record_over">Are you sure you want to record again without saving?</string>
    <string name="dialog_confirm_delete">Delete recordings?</string>
    <string name="dialog_confirm_delete_yes">YES</string>
    <string name="dialog_confirm_delete_no">NO</string>

    <!-- DESCRIPTIONS -->
    <string name="files_content_desc">Files Button</string>
    <string name="settings_content_desc">Settings Button</string>
    <string name="record_content_desc">Record Button</string>
    <string name="img_button_desc">Image Button</string>

    <!-- EXPORT/SHARE OPTIONS -->
    <string name="export_sd_card">SD Card</string>
    <string name="export_dir">Choose Directory</string>
    <string name="export_bluetooth">Bluetooth</string>
    <string name="export_wifi">Wi-Fi Direct</string>
    <string name="export_upload">Upload</string>
    <string name="export_other">App</string>

    <!-- SETTINGS (Values) -->
    <string name="pref_default_folder_value">/storage/emulated/0/translationRecorder</string>
    <string name="pref_default_lang">en</string>
    <string name="pref_default_book">gen</string>
    <string name="pref_default_chapter">1</string>
    <string name="pref_default_chunk">1</string>
    <string name="pref_default_take">1</string>
    <string name="pref_default_filename">"en_udb_gen_1_1-1"</string>
    <string name="pref_ftp_server_value">ts.door43.org</string>
    <string name="pref_ftp_directory_value">/translationRecorder</string>
    <string name="pref_ftp_username_value">unfoldingWord-1</string>
    <string name="pref_ftp_password_value">trisawesome</string>
    <string name="action_search">Search</string>
    <string name="menu_update">Update</string>

    <!-- SETTINGS (Summaries) -->
    <string name="pref_default_folder_summary">@string/pref_default_folder_value</string>
    <string name="pref_ftp_server_summary">@string/pref_ftp_server_summary</string>
    <string name="pref_ftp_directory_summary">@string/pref_ftp_directory_value</string>
    <string name="pref_ftp_username_summary">@string/pref_ftp_username_value</string>
    <string name="pref_ftp_password_summary">@string/pref_ftp_password_value</string>
    <string name="pref_sync_summary">Sync data with server</string>
    <string name="pref_restore_default_summary">Revert all settings to initial value</string>
</resources>